--- a/web/blog/package.json
+++ b/web/blog/package.json
@@ -14,9 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^12.1.0",
-    "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
     "axios": "^0.18.0",
+    "highlight.js": "^9.15.8",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "qs": "^6.7.0",
