--- a/web/blog/package.json
+++ b/web/blog/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "highlight.js": "^9.15.8",
     "jquery": "^3.3.1",
+    "marked": "^0.7.0",
     "mavon-editor": "^2.7.5",
     "popper.js": "^1.14.7",
     "qs": "^6.7.0",
