--- a/web/blog/package.json
+++ b/web/blog/package.json
@@ -62,6 +62,8 @@
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "jquery": "^3.3.1",
+    "marked": "^0.7.0",
+    "mavon-editor": "^2.7.5",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
