--- a/web/blog/package.json
+++ b/web/blog/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.11.1",
     "highlight.js": "^9.15.8",
     "jquery": "^3.3.1",
     "marked": "^0.7.0",
