--- a/web/blog/package.json
+++ b/web/blog/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.12.0",
     "highlight.js": "^9.15.8",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.1",
     "marked": "^0.7.0",
     "mavon-editor": "^2.7.5",
     "popper.js": "^1.14.7",
