--- a/web/blog/package.json
+++ b/web/blog/package.json
@@ -24,7 +24,9 @@
     "popper.js": "^1.14.7",
     "qs": "^6.7.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
